--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "HTML/CSS SPK Demo 🔥",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc --watch --preserveWatchOutput"
+    "dev": "npx eslint . && tsc --watch --preserveWatchOutput"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.6.2"
+    "@eslint/js": "^9.11.0",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.11.0",
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.6.0"
   }
 }
