--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,15 @@
 {
+
     "compilerOptions": {
-      "outDir": "dist", // where to put the TS files
-      "target": "ES2023", // which level of JS support to target
-      "module": "CommonJS",
-      "strict": true
+      "target": "es5",
+      "module": "commonjs",
+      "strict": true,
+      "noImplicitAny": true,
+      "esModuleInterop": true,
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true
     },
+
     "include": ["src", "index.ts"] // which files to compile
+
   }
