--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 
     "compilerOptions": {
-      "target": "es5",
+      "target": "ES2020", // which level of JS support to target
       "module": "commonjs",
       "strict": true,
       "noImplicitAny": true,
