--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
 
     "compilerOptions": {
-      "target": "es5",
+      "outDir": "dist",
+      "target": "es2015",
       "module": "commonjs",
       "strict": true,
       "noImplicitAny": true,
