--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,16 @@
 {
 
-    "compilerOptions": {
-      "target": "ES2020", // which level of JS support to target
-      "module": "commonjs",
-      "strict": true,
-      "noImplicitAny": true,
-      "esModuleInterop": true,
-      "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true
-    },
+  "compilerOptions": {
+    "outDir": "dist",
+    "target": "es2015",
+    "module": "commonjs",
+    "strict": true,
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
+  },
 
-    "include": ["src", "index.ts"] // which files to compile
+  "include": ["src", "index.ts"] // which files to compile
 
-  }
+}
